# Quantitative-Margin-Volatility-Engine-

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  conftest.py  deploy.sh  openapi.json  railway.json  render.yaml  requirements.txt  selection_dash.py  setup.cfg  setup_api.sh
.github/workflows/: axiom_statcast_refresh.yml  ci.yml  python-package.yml  statcast-refresh.yml
api/: __init__.py  base44_client.py  main.py
data/: latest_statcast.csv  sweet16.py
frontend/: App.jsx
lib/: axiom60.py
scripts/: api.py  audit_vault.py  axiom60.py  hospitality.py  refresh_statcast.py  tournament_slate.py
src/: Axiom60.jsx  __init__.py  data_loader.py  margin_calculator.py  stress_point_detector.py  volatility_analyzer.py
tests/: test_api.py  test_audit_vault.py  test_axiom60.py  test_base44_client.py  test_data_loader.py  test_hospitality.py  test_margin_calculator.py  test_refresh_statcast.py  test_stress_point_detector.py  test_sweet16_dash.py  test_tournament_slate.py  test_volatility_analyzer.py
