[metadata]
name = quantitative-margin-volatility-engine
version = 0.1.0
description = Pipeline for processing high-variance time-series data to identify efficiency margins and predictive stress points
long_description = file: README.md
python_requires = >=3.9

[options]
packages = find:
package_dir =
    = .
include_package_data = True

[options.packages.find]
where = .
exclude =
    tests*

[tool:pytest]
testpaths = tests
addopts = -v --tb=short

[flake8]
max-line-length = 127
extend-ignore = E203
